GtkWidget: add missing deprecation marks

https://bugzilla.gnome.org/show_bug.cgi?id=696138