gtk/gtkwidget.c
@@ -1617,7 +1617,7 @@ gtk_widget_class_init (GtkWidgetClass *klass)
   widget_signals[STATE_CHANGED] =
     g_signal_new (I_("state-changed"),
 		  G_TYPE_FROM_CLASS (gobject_class),
-		  G_SIGNAL_RUN_FIRST,
+		  G_SIGNAL_RUN_FIRST | G_SIGNAL_DEPRECATED,
 		  G_STRUCT_OFFSET (GtkWidgetClass, state_changed),
 		  NULL, NULL,
 		  _gtk_marshal_VOID__ENUM,
@@ -1704,7 +1704,7 @@ gtk_widget_class_init (GtkWidgetClass *klass)
   widget_signals[STYLE_SET] =
     g_signal_new (I_("style-set"),
 		  G_TYPE_FROM_CLASS (gobject_class),
-		  G_SIGNAL_RUN_FIRST,
+		  G_SIGNAL_RUN_FIRST | G_SIGNAL_DEPRECATED,
 		  G_STRUCT_OFFSET (GtkWidgetClass, style_set),
 		  NULL, NULL,
 		  _gtk_marshal_VOID__OBJECT,
